fix margin & padding spacing around tweets and compose box

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,7 +25,7 @@ body {
   margin: 0 auto;
   width: 450px;
   align-content: center;
-  padding:40px 20px 100px 20px;
+  padding:40px 20px 0px 20px;
   background-color: #fff;
 }
 /*
